# pypeul

./: .gitignore  .hgignore  AUTHORS  README.md  main.py  pypeul.py  pyproject.toml  setup.py
examples/modulable_bot/: main.py
examples/modulable_bot/modules/: chain.py  console.py  lodgeit.py  snippet.py
examples/simple_bot/: main.py
extra/examplebot/: main.py
extra/examplebot/modules/: chain.py  lodgeit.py
modules/: arok.py  chain.py  lodgeit.py
